mod: nuxtからVueへの移行

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ _ide_helper.php
 .nuxt
 public/_nuxt
 public/.htaccess
+public/css
+public/fonts
+public/js
+public/mix-manifest.json
 
 #docker
 docker/misc/data
