--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "description": "oss-calendar project",
   "scripts": {
-    "dev": "nuxt",
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -24,14 +29,18 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
+    "cross-env": "^7.0.2",
     "fs-extra": "^8.1.0",
+    "laravel-mix": "^5.0.4",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "nuxt": "^2.9.2",
+    "resolve-url-loader": "^3.1.0",
     "rrule": "^2.6.2",
     "sass-loader": "^8.0.0",
     "url": "^0.11.0",
     "vee-validate": "2.2.15",
+    "vue": "^2.6.10",
     "vuetify": "^2.0.18"
   },
   "devDependencies": {
