--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
+    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "postinstall": "npm run prod"
   },
   "dependencies": {
     "@fullcalendar/core": "^4.3.1",
