--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,11 @@ yarn-error.log
 _ide_helper.php
 .nuxt
 public/_nuxt
-public/.htaccess
 public/css
 public/fonts
 public/js
 public/mix-manifest.json
+public/images
 
 #docker
 docker/misc/data
