--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "~7.3.0",
+        "php": "^7.2.0",
         "barryvdh/laravel-cors": "^0.11.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
         "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
         "simshaun/recurr": "^4.0"
