--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "url": "^0.11.0",
     "vee-validate": "2.2.15",
     "vue": "^2.6.10",
-    "vuetify": "^2.0.18"
+    "vuetify": "^2.0.18",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@mdi/font": "^4.4.95",
