--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^6.0",
         "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
-        "simshaun/recurr": "^4.0"
+        "simshaun/recurr": "^4.0",
+        "spatie/laravel-google-calendar": "^2.6"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
